# RAG-chatbot

./: README.md  pyproject.toml  requirements.txt
data/: chroma.sqlite3-journal  dataset
notebook/: app.py  data_loader.py  document.ipynb  embedding.py  pdf_loader.ipynb  search.py  vectorstore.py
