[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.24.0",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.3",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.56.0",
]
